crates/compiler/tests/parse_errors/custom_bar.elm
module Main exposing (..)

type Foo = A B | 
